# 202203.rust-graphql-blog

./: Cargo.toml  README.md
src/: data.rs  lib.rs  main.rs  model.rs  starwars.rs
src/model/starwars/: data.rs  model.rs
